feat: add project instructions loader from VIBE.md

--- a/.cursor-tasks.md
+++ b/.cursor-tasks.md
@@ -65,7 +65,7 @@
 
 ### **Step 4.1: Basic Project Context** [Est: 1-2 hours] [MEDIUM PRIORITY]
 
-- [ ] **Develop** loader for project instructions from `VIBE.md` file
+- [x] **Develop** loader for project instructions from `VIBE.md` file
 - [x] **Implement** context injection mechanism to provide project information to AI during sessions
 - [x] **Create** context management system to maintain state between interactions
 
