feat: add directory management tools and enhanced agent system prompt

--- a/.cursor-tasks.md
+++ b/.cursor-tasks.md
@@ -104,9 +104,16 @@
 
 ### **Step 6.2: Directory Management** [Est: 2 hours] [MEDIUM PRIORITY]
 
-- [ ] **Create** `mkdir` tool with recursive directory creation capability
-- [ ] **Implement** `moveFile` tool with rename/move functionality and collision detection
-- [ ] **Add** appropriate error handling for all file system operations
+- [x] **Create** `mkdir` tool with recursive directory creation capability
+- [x] **Implement** `moveFile` tool with rename/move functionality and collision detection
+- [x] **Add** appropriate error handling for all file system operations
+
+### **Step 6.3: Enhanced Agent System Prompt** [Est: 2-3 hours] [HIGH PRIORITY] [MEDIUM FOCUS]
+
+- [x] **Design** comprehensive system prompt tailored for coding assistant capabilities
+- [x] **Implement** role-specific instructions that optimize agent for programming tasks
+- [x] **Create** configurable prompt parameters to adjust AI personality and verbosity
+- [x] **Add** tool usage guidelines in system prompt to improve AI's tool utilization
 
 ---
 
@@ -204,21 +211,3 @@
 
 - [ ] **Create** detailed CLI documentation in `docs/` directory
 - [ ] **Implement** comprehensive in-terminal help system with `vibe help <command>`
-- [ ] **Write** troubleshooting guides for common issues
-
-### **Step 14.2: Workflow Examples** [Est: 3-4 hours] [MEDIUM PRIORITY] [LOW FOCUS]
-
-- [ ] **Develop** step-by-step guides for debugging workflows
-- [ ] **Create** example refactoring scenarios with vibe-cli
-- [ ] **Document** advanced usage patterns for power users
-
----
-
-## **Phase 12: CI/CD Pipeline & Automated Releases**
-
-### **Step 15.1: GitHub Actions CI/CD** [Est: 3-4 hours] [MEDIUM PRIORITY] [MEDIUM FOCUS]
-
-- [ ] **Configure** GitHub Actions workflow for automated testing
-- [ ] **Implement** linting checks in CI pipeline
-- [ ] **Set up** automated package build and release workflow
-- [ ] **Create** semantic versioning automation
