--- a/.cursor-tasks.md
+++ b/.cursor-tasks.md
@@ -2,35 +2,35 @@
 
 ### **1. Project Initialization** [Foundation]
 
-- [x] **Create** Node.js project by running `npm init -y` [Est: 15 min] [HIGH PRIORITY]
-- [x] **Configure** project with `.gitignore` to exclude node_modules and build artifacts [Est: 10 min] [HIGH PRIORITY]
-- [x] **Set up** TypeScript environment with properly configured `tsconfig.json` [Est: 30 min] [HIGH PRIORITY]
+- [x] **Create** Node.js project by running `npm init -y`
+- [x] **Configure** project with `.gitignore` to exclude node_modules and build artifacts
+- [x] **Set up** TypeScript environment with properly configured `tsconfig.json`
   * Ensure strict mode is enabled
   * Configure proper output directories
 
 ### **Step 1.2: Essential CLI Setup** [Core Functionality]
 
-- [x] **Install** `yargs` package for handling command-line arguments and options [Est: 15 min] [HIGH PRIORITY]
-- [x] **Create** minimal CLI entry point at `bin/vibe.ts` with basic command structure [Est: 45 min] [HIGH PRIORITY]
-- [x] **Enable** global executable with `npm link` for local development testing [Est: 10 min] [HIGH PRIORITY] [DEPENDS ON: CLI entry point setup]
+- [x] **Install** `yargs` package for handling command-line arguments and options
+- [x] **Create** minimal CLI entry point at `bin/vibe.ts` with basic command structure
+- [x] **Enable** global executable with `npm link` for local development testing
 
 ### **Step 1.13 Basic REPL Interface** [User Experience]
 
-- [x] **Install** `prompts` library for enhanced interactive terminal input [Est: 10 min] [HIGH PRIORITY]
-- [x] **Implement** basic interactive REPL (Read-Eval-Print Loop) with proper lifecycle management [Est: 2 hours] [HIGH PRIORITY] [HIGH FOCUS]
-- [x] **Create** minimal user interaction flow with prompt → AI response loop [Est: 1 hour] [HIGH PRIORITY]
+- [x] **Install** `prompts` library for enhanced interactive terminal input
+- [x] **Implement** basic interactive REPL (Read-Eval-Print Loop) with proper lifecycle management
+- [x] **Create** minimal user interaction flow with prompt → AI response loop
 
 ### **Step 1.4: Core AI Integration** [Intelligence]
 
-- [x] **Develop** minimal `queryAI(messages)` function with streaming response capability [Est: 3 hours] [HIGHEST PRIORITY] [HIGH FOCUS]
-- [x] **Integrate** Ollama API to establish functional AI response system [Est: 2 hours] [HIGH PRIORITY]
-- [x] **Test** basic connectivity with simple AI query to verify end-to-end functionality [Est: 1 hour] [HIGH PRIORITY]
+- [x] **Develop** minimal `queryAI(messages)` function with streaming response capability
+- [x] **Integrate** Ollama API to establish functional AI response system
+- [x] **Test** basic connectivity with simple AI query to verify end-to-end functionality
 
 ---
 
 ## **2. Minimal Tool System** [Extensibility]
 
-### **Step 2.1: Basic Tool Architecture** [Est: 2-3 hours] [HIGH PRIORITY] [HIGH FOCUS]
+### **Step 2.1: Basic Tool Architecture**
 
 - [x] **Design** minimal `Tool` interface with clear typing:
   * name: string (unique tool identifier)
@@ -39,7 +39,7 @@
 - [x] **Implement** dynamic tool loading system from `tools/` directory with error handling
 - [x] **Create** tool registration mechanism for runtime discovery
 
-### **Step 2.2: Essential File System Tools** [Est: 2-3 hours] [MEDIUM PRIORITY]
+### **Step 2.2: Essential File System Tools**
 
 - [x] **Build** `listDir` tool that safely lists files/folders with proper error handling
 - [x] **Develop** `readFile` tool with security checks to prevent unauthorized access
@@ -49,7 +49,7 @@
 
 ## **3. Permissions & Security** [Trust & Safety]
 
-### **Step 3.1: Permission Handling** [Est: 2-3 hours] [HIGH PRIORITY] [HIGH FOCUS]
+### **Step 3.1: Permission Handling**
 
 - [x] **Implement** interactive permission prompt system before executing potentially dangerous tools
 - [x] **Create** in-memory permission tracking mechanism that persists for the current session
@@ -59,7 +59,7 @@
 
 ## **4. Essential Context Management** [Intelligence]
 
-### **Step 4.1: Basic Project Context** [Est: 1-2 hours] [MEDIUM PRIORITY]
+### **Step 4.1: Basic Project Context**
 
 - [x] **Develop** loader for project instructions from `VIBE.md` file
 - [x] **Implement** context injection mechanism to provide project information to AI during sessions
@@ -69,7 +69,7 @@
 
 ## **Additional Features**
 
-### **AI Agent Mode** [Est: 3-4 hours] [HIGH PRIORITY]
+### **AI Agent Mode**
 
 - [x] **Implement** agent mode where AI can autonomously use tools
 - [x] **Create** tool call format parsing for AI responses
@@ -80,13 +80,13 @@
 
 ## **Phase 2: MVP Enhancements**
 
-### **Step 5.1: Command History & UX** [Est: 3-4 hours] [MEDIUM PRIORITY]
+### **Step 5.1: Command History & UX**
 
 - [x] **Implement** REPL history navigation using arrow keys for better user experience
 - [x] **Add** session metadata tracking (start time, command count, duration)
 - [x] **Develop** command recall functionality (similar to bash history)
 
-### **Step 5.2: Customizable REPL Prompt** [Est: 2 hours] [LOW PRIORITY] [LOW FOCUS]
+### **Step 5.2: Customizable REPL Prompt**
 
 - [ ] **Create** customizable prompt system with color indicators
 - [ ] **Implement** user prompt configurability with reasonable defaults
@@ -96,19 +96,19 @@
 
 ## **Phase 3: Advanced Toolset for User Testing**
 
-### **Step 6.1: File Management** [Est: 3 hours] [MEDIUM PRIORITY]
+### **Step 6.1: File Management**
 
 - [x] **Develop** `writeFile` tool with built-in overwrite confirmation safeguards
 - [x] **Implement** `createFile` tool with proper permission checking
 - [x] **Build** `deleteFile` tool with confirmation prompts for destructive actions
 
-### **Step 6.2: Directory Management** [Est: 2 hours] [MEDIUM PRIORITY]
+### **Step 6.2: Directory Management**
 
 - [x] **Create** `mkdir` tool with recursive directory creation capability
 - [x] **Implement** `moveFile` tool with rename/move functionality and collision detection
 - [x] **Add** appropriate error handling for all file system operations
 
-### **Step 6.3: Enhanced Agent System Prompt** [Est: 2-3 hours] [HIGH PRIORITY] [MEDIUM FOCUS]
+### **Step 6.3: Enhanced Agent System Prompt**
 
 - [x] **Design** comprehensive system prompt tailored for coding assistant capabilities
 - [x] **Implement** role-specific instructions that optimize agent for programming tasks
@@ -119,13 +119,13 @@
 
 ## **Phase 4: Logging, Auditability & Error Handling**
 
-### **Step 7.1: Action Logging** [Est: 1-2 hours] [MEDIUM PRIORITY] [LOW FOCUS]
+### **Step 7.1: Action Logging**
 
 - [ ] **Implement** comprehensive tool execution logging to `logs/actions.log`
 - [ ] **Create** structured log format with timestamps, tool names, and parameters
 - [ ] **Design** log rotation mechanism to prevent excessive file growth
 
-### **Step 7.2: Basic Error Handling** [Est: 2-3 hours] [HIGH PRIORITY]
+### **Step 7.2: Basic Error Handling**
 
 - [ ] **Develop** centralized error logging system writing to `logs/error.log`
 - [ ] **Implement** graceful error recovery mechanisms
@@ -135,13 +135,13 @@
 
 ## **Phase 5: Configuration & Persistence**
 
-### **Step 8.1: Basic Configuration** [Est: 2 hours] [MEDIUM PRIORITY]
+### **Step 8.1: Basic Configuration**
 
 - [ ] **Implement** global configuration storage in `~/.viberc.json`
 - [ ] **Create** configuration loading and validation system
 - [ ] **Develop** command-line options to override configuration
 
-### **Step 8.2: Session Persistence** [Est: 2-3 hours] [MEDIUM PRIORITY]
+### **Step 8.2: Session Persistence**
 
 - [ ] **Build** session storage mechanism for `session.json`
 - [ ] **Implement** session restoration functionality
@@ -151,7 +151,7 @@
 
 ## **Phase 6: Documentation & Onboarding**
 
-### **Step 9.1: Essential Documentation** [Est: 3-4 hours] [HIGH PRIORITY] [LOW FOCUS]
+### **Step 9.1: Essential Documentation**
 
 - [ ] **Write** comprehensive README with installation instructions
 - [ ] **Document** basic usage patterns with examples
@@ -161,13 +161,13 @@
 
 ## **Phase 7: Testing, Quality Assurance, and CI/CD**
 
-### **Step 10.1: Code Quality & Linting** [Est: 1-2 hours] [MEDIUM PRIORITY] [LOW FOCUS]
+### **Step 10.1: Code Quality & Linting**
 
 - [x] **Configure** ESLint with appropriate TypeScript rules
 - [x] **Set up** Prettier for consistent code formatting
 - [ ] **Implement** Git hooks using husky for pre-commit formatting/linting
 
-### **Step 10.2: Basic Unit Tests** [Est: 4-6 hours] [HIGH PRIORITY] [HIGH FOCUS]
+### **Step 10.2: Basic Unit Tests**
 
 - [ ] **Configure** Jest testing framework with TypeScript support
 - [ ] **Write** unit tests for critical code paths
@@ -177,7 +177,7 @@
 
 ## **Phase 8: Advanced Semantic Features**
 
-### **Step 11.1: Semantic Search & Retrieval** [Est: 4-6 hours] [MEDIUM PRIORITY] [HIGH FOCUS]
+### **Step 11.1: Semantic Search & Retrieval**
 
 - [ ] **Implement** `semanticSearch` tool for intelligent code snippet discovery
 - [ ] **Integrate** vector-based search capabilities
@@ -187,7 +187,7 @@
 
 ## **Phase 9: Advanced Terminal (Bash) Integration**
 
-### **Step 12.1: Bash Integration** [Est: 3-4 hours] [MEDIUM PRIORITY] [HIGH FOCUS]
+### **Step 12.1: Bash Integration**
 
 - [ ] **Implement** secure shell command execution tool with sandboxing
 - [ ] **Create** command validation system to prevent dangerous operations
@@ -197,7 +197,7 @@
 
 ## **Phase 10: Analytics & Advanced Error Handling**
 
-### **Step 13.1: Usage Analytics** [Est: 2-3 hours] [LOW PRIORITY] [LOW FOCUS]
+### **Step 13.1: Usage Analytics**
 
 - [ ] **Implement** privacy-respecting analytics logging system
 - [ ] **Track** command usage patterns and durations
@@ -207,7 +207,7 @@
 
 ## **Phase 11: Full Documentation & Examples**
 
-### **Step 14.1: Complete Documentation** [Est: 4-6 hours] [MEDIUM PRIORITY] [LOW FOCUS]
+### **Step 14.1: Complete Documentation**
 
 - [ ] **Create** detailed CLI documentation in `docs/` directory
 - [ ] **Implement** comprehensive in-terminal help system with `vibe help <command>`
