test: add Jest tests for core components

--- a/.cursor-tasks.md
+++ b/.cursor-tasks.md
@@ -169,9 +169,9 @@
 
 ### **Step 10.2: Basic Unit Tests**
 
-- [ ] **Configure** Jest testing framework with TypeScript support
-- [ ] **Write** unit tests for critical code paths
-- [ ] **Implement** CI-ready test commands in package.json
+- [x] **Configure** Jest testing framework with TypeScript support
+- [x] **Write** unit tests for critical code paths
+- [x] **Implement** CI-ready test commands in package.json
 
 ---
 
